0028469: Visualization, StdPrs_ShadedShape - do not create redundant copy of normal array